cluster/download/scryer/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scryer
  namespace: download
  labels:
    app: scryer
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: scryer
  template:
    metadata:
      labels:
        app: scryer
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: scryer
          image: ghcr.io/scryer-media/scryer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
            failureThreshold: 10
          resources:
            requests:
              cpu: 100m
              memory: 128M
            limits:
              cpu: "4"
              memory: 4Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: scryer-config
        - name: data
          persistentVolumeClaim:
            claimName: scryer-data
