cluster/download/scryer/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scryer
  namespace: download
spec:
  selector:
    app: scryer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
