cluster/download/scryer/resources/http-route-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scryer-http-external
  namespace: download
spec:
  hostnames:
    - request.abraxis.tv
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: scryer
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
