cluster/download/scryer/resources/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: scryer
  namespace: download
spec:
  endpointSelector:
    matchLabels:
      app: scryer
  ingress:
    - fromEntities:
        - host
        - remote-node
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: download
            app: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: download
            app: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: download
            app: prowlarr
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: download
            app: weaver
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEntities:
        - world
